--- a/lab7/lab7/lab7.vcxproj
+++ b/lab7/lab7/lab7.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{14F8A4F8-6EC9-4184-B276-CC3A9CCB4BB2}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>lab7</RootNamespace>
+    <ProjectName>lab_7</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
